--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <li id="load-modal-button" data-toggle="modal" data-target="#load-modal"><a href="#">Load</a></li>
                     <li data-toggle="modal" data-target="#upload-modal"><a href="#">Upload</a></li>
                     <!-- <li data-toggle="modal" data-target="#tag-modal"><a href="#">Tags</a></li> -->
-                    <li data-toggle="modal" data-target="#export-modal"><a href="#">Export</a></li>
+                    <li id="export-modal-button" data-toggle="modal" data-target="#export-modal"><a href="#">Export</a></li>
                 </ul>
             </div>
             </div>
@@ -187,9 +187,9 @@
 
                     <h5>Select a file to download.</h5>
                     <div class="list-group export-links">
-                        <a href="#" class="list-group-item">Document metadata<span class="glyphicon glyphicon-circle-arrow-down"></span></a>
-                        <a href="#" class="list-group-item">Visualisation extract<span class="glyphicon glyphicon-circle-arrow-down"></span></a>
-                        <a href="#" class="list-group-item">System schema<span class="glyphicon glyphicon-circle-arrow-down"></span></a>
+                        <a href="#" class="list-group-item" id="exportDoc">Tagged Document<span class="glyphicon glyphicon-circle-arrow-down"></span></a>
+                        <a href="#" class="list-group-item" id="exportVisual">Visualisation Extract<span class="glyphicon glyphicon-circle-arrow-down"></span></a>
+                        <a href="#" class="list-group-item" id="exportSchema">System Schema<span class="glyphicon glyphicon-circle-arrow-down"></span></a>
                     </div>
                 </div>
             </div>
