upload form validation

--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
                             <span class='label label-info' id="upload-file-info"></span>
                             <div class="upload-form-meta">
                                 <h5>Document Meta Data</h5>
-                                <input type="text" class="form-control" placeholder="Author..." aria-describedby="author-text" name="file-meta-author">
-                                <input type="text" class="form-control" placeholder="Title..." aria-describedby="title-text" name="file-meta-title">
-                                <input type="text" class="form-control" placeholder="Genre..." aria-describedby="genre-text" name="file-meta-genre">
+                                <input type="text" class="form-control" placeholder="Author..." aria-describedby="author-text" name="file-meta-author" id="file-meta-author">
+                                <input type="text" class="form-control" placeholder="Title..." aria-describedby="title-text" name="file-meta-title" id="file-meta-title">
+                                <input type="text" class="form-control" placeholder="Genre..." aria-describedby="genre-text" name="file-meta-genre" id="file-meta-genre">
                             </div>
                         </div>
                     </div>
