--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <!-- META INFORMATION -->
     <title>Visualisation Tool</title>
-    <meta name="Description" content="A tag based Data Visualisation Tool for the Digital Humanities that incorcoporates Text Analysis to discover insight surrounding entities within historical documents. Designed for the University of Chester in 2016-17 by Joshua Evans."/>
+    <meta name="Description" content="A tag based Data Visualisation Tool for the Digital Humanities that incorcoporates Text Analysis to discover insight surrounding entities within historical documents. Designed for the University of Chester in 2016-17 by Joshua Evans."
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
@@ -286,9 +288,9 @@
                 <!-- VISUALISATION -->
                 <div class="col-md-7 fill custom-visualisation-pane">
 
-                  <!-- <p id="visual-placeholder" class="placeholder">Visualisation</p> -->
+                    <!-- <p id="visual-placeholder" class="placeholder">Visualisation</p> -->
                     <div class="visualisation-pane" id="visualisation-selector">
-                      <!-- <p id="visual-placeholder" class="placeholder">Visualisation</p> -->
+                        <!-- <p id="visual-placeholder" class="placeholder">Visualisation</p> -->
                         <!-- <canvas id="canvas" class="wordcloud" width="1448" height="940"></canvas> -->
                         <!-- <div id="wordcontext" class="wordcontext"></div> -->
 
@@ -305,4 +307,5 @@
         </div>
     </section>
 </body>
+
 </html>
