Added hotjar tracking

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <!-- META INFORMATION -->
-    <title>Visualisation Tool</title>
+    <title>eCorpi - Visualisation Tool</title>
     <meta name="Description" content="A tag based Data Visualisation Tool for the Digital Humanities that incorcoporates Text Analysis to discover insight surrounding entities within historical documents. Designed for the University of Chester in 2016-17 by Joshua Evans."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
@@ -17,6 +17,7 @@
     <link href="Libs/jquery-contextMenu/dist/jquery.contextMenu.min.css" rel="stylesheet" />
     <link href="Libs/tooltipster/dist/css/tooltipster.bundle.min.css" rel="stylesheet" />
     <link href="Libs/tooltipster/dist/css/plugins/tooltipster/sideTip/themes/tooltipster-sideTip-light.min.css" rel="stylesheet" />
+    <link href="favicon.ico" rel="icon" type="image/x-icon">
     <link href="CSS/custom.css" rel="stylesheet" title="custom" />
 
     <!-- SCRIPTS -->
